Refactor relic randomizer to provide new mapping without writing data

--- a/relics/index.html
+++ b/relics/index.html
@@ -1,221 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="../constants.js"></script>
-    <script src="../errors.js"></script>
-    <script src="../extension.js"></script>
-    <script src="../items.js"></script>
-    <script src="../relics.js"></script>
-    <script src="../util.js"></script>
-    <script src="../presets/casual.js"></script>
-    <script src="../presets/safe.js"></script>
-    <script src="../randomize_relics.js"></script>
-    <script>
-    const doStuff = function() {
-      const relics = [{
-        name: 'Soul of Bat',
-        id: 0,
-        address: 0x047a5b66,
-      }, {
-        name: 'Fire of Bat',
-        id: 1,
-        address: 0x0557535e,
-      }, {
-        name: 'Echo of Bat',
-        id: 2,
-        address: 0x04aa4156,
-      }, {
-        name: 'Force of Echo',
-        id: 3,
-        address: 0x0526e6a8,
-      }, {
-        name: 'Soul of Wolf',
-        id: 4,
-        address: 0x049d6596,
-      }, {
-        name: 'Power of Wolf',
-        id: 5,
-        address: 0x04b6b9b4,
-      }, {
-        name: 'Skill of Wolf',
-        id: 6,
-        address: 0x054b1d5a,
-      }, {
-        name: 'Form of Mist',
-        id: 7,
-        address: 0x043c578a,
-      }, {
-        name: 'Power of Mist',
-        id: 8,
-        address: 0x05610db8
-      }, {
-        name: 'Gas Cloud',
-        id: 9,
-        address: 0x04cfcb16,
-      }, {
-        name: 'Cube of Zoe',
-        id: 10,
-        address: 0x04b6b946,
-      }, {
-        name: 'Spirit Orb',
-        id: 11,
-        address: 0x048fd1fe,
-      }, {
-        name: 'Gravity Boots',
-        id: 12,
-        address: 0x048fc9ba,
-      }, {
-        name: 'Leap Stone',
-        id: 13,
-        address: 0x05610dc2,
-      }, {
-        name: 'Holy Symbol',
-        id: 14,
-        address: 0x04c34ee6,
-      }, {
-        name: 'Faerie Scroll',
-        id: 15,
-        address: 0x047a5720,
-      }, {
-        name: 'Jewel of Open',
-        id: 16,
-        address: 0x047a321c,
-      }, {
-        name: 'Merman Statue',
-        id: 17,
-        address: 0x04c35174,
-      }, {
-        name: 'Bat Card',
-        id: 18,
-        address: 0x054b1d58,
-      }, {
-        name: 'Ghost Card',
-        id: 19,
-        address: 0x05611958,
-      }, {
-        name: 'Faerie Card',
-        id: 20,
-        address: 0x047a5784,
-      }, {
-        name: 'Demon Card',
-        id: 21,
-        address: 0x045ea95e,
-      }, {
-        name: 'Sword Card',
-        id: 22,
-        address: 0x04aa3f76,
-      }, {
-        name: 'Heart of Vlad',
-        id: 25,
-        address: 0x067437d2,
-      }, {
-        name: 'Tooth of Vlad',
-        id: 26,
-        address: 0x05051d52,
-      }, {
-        name: 'Rib of Vlad',
-        id: 27,
-        address: 0x069d2b1e,
-      }, {
-        name: 'Ring of Vlad',
-        id: 28,
-        address: 0x059bdb30,
-      }, {
-        name: 'Eye of Vlad',
-        id: 29,
-        address: 0x04da65f2,
-      }]
-
-      const addresses = {}
-      const ids = {}
-      relics.forEach(function(relic) {
-        addresses[relic.address] = relic.name
-        ids[relic.id] = relic.name
-      })
-
-      const totals = {}
-      const searchParams = new URLSearchParams(window.location.search)
-      const runs = searchParams.get('runs') || 1000
-      const data = {}
-      const checked = new window.sotnRando.util.checked(data, {})
-      const options = {relicLocations: true}
-      const locks = searchParams.get('locks')
-      if (locks) {
-        options.relicLocks = {}
-        locks.split(',').forEach(function(lock) {
-          options.relicLocks[lock[1]] = lock.slice(2).split('-')
-        })
-      }
-      for (let i = 0; i < runs; i++) {
-        window.sotnRando.randomizeRelics(checked, options)
-
-        relics.forEach(function(relic) {
-          const loc = addresses[relic.address]
-          const item = ids[data[relic.address]]
-
-          if (!totals[loc]) {
-            totals[loc] = {}
-          }
-          if (!totals[loc][item]) {
-            totals[loc][item] = 0
-          }
-          totals[loc][item]++
-        })
-      }
-
-      const content = document.getElementById('content')
-      const newDiv = function() {
-        return document.createElement('div')
-      }
-      const row = newDiv()
-      row.className = 'row'
-
-      row.appendChild(newDiv())
-      relics.forEach(function(relic) {
-        const cell = newDiv()
-        cell.textContent = relic.name
-        cell.className = 'col-header'
-        row.appendChild(cell)
-      })
-      content.appendChild(row)
-
-      const getClassname = function(count) {
-        if (count === 0) {
-          return 'zero'
-        }
-        if (count <= runs / relics.length) {
-          return 'below-average'
-        }
-        if (count <= 1.5 * runs / relics.length) {
-          return 'average'
-        }
-        if (count <= 3 * runs / relics.length) {
-          return 'above-average'
-        }
-        return 'a-lot'
-      }
-
-      relics.forEach(function(relic) {
-        const locRow = newDiv()
-        locRow.className = 'row'
-        const loc = newDiv()
-        loc.className = 'row-header'
-        loc.textContent = relic.name
-        locRow.appendChild(loc)
-
-        relics.forEach(function(r) {
-          const count = newDiv()
-          const amount = totals[relic.name][r.name] || 0
-          count.textContent = amount
-          count.className = getClassname(amount)
-          locRow.appendChild(count)
-        })
-        content.appendChild(locRow)
-      })
-    }
-
-    window.onload = doStuff
-    </script>
     <style>
       #content {
         display: table;
@@ -256,5 +41,15 @@
     <div>Change then number of runs by adding ?runs=# to the end of the url</div>
     <div id='content'>
     </div>
+    <script src="../constants.js"></script>
+    <script src="../errors.js"></script>
+    <script src="../extension.js"></script>
+    <script src="../items.js"></script>
+    <script src="../relics.js"></script>
+    <script src="../util.js"></script>
+    <script src="../presets/casual.js"></script>
+    <script src="../presets/safe.js"></script>
+    <script src="../randomize_relics.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
