--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>March 29, 2020</time></h3>
+      <ul>
+        <li>Fix progression item duping at relic bosses.</li>
+      </ul>
       <h3><time>March 28, 2020</time></h3>
       <ul>
         <li>Fix information leak of progression item randomization.</li>
