--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
       <h3><time>March 29, 2020</time></h3>
       <ul>
         <li>Fix progression item duping at relic bosses.</li>
+        <li>Fix missing progression item at Scylla.</li>
       </ul>
       <h3><time>March 28, 2020</time></h3>
       <ul>
