--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>March 31, 2020</time></h3>
+      <ul>
+        <li>Fix exception when replacing Holy Glasses with relic.</li>
+      </ul>
       <h3><time>March 30, 2020</time></h3>
       <ul>
         <li>Fix gold ring duping.</li>
