Add adventure mode

--- a/index.html
+++ b/index.html
@@ -88,6 +88,23 @@
                     </label>
                   </div>
                   <div>
+                    <input id="extension-equipment"
+                           name="extension"
+                           type="radio"
+                           value="classic">
+                    <label for="extension-equipment">
+                      Equipment
+                      <span class="tooltip-wrapper">
+                        <span class="tooltip-indicator">?</span>
+                        <span class="tooltip hidden">
+                          <span id="extension-description">
+                            Relics may appear in place of equipment tiles.
+                          </span>
+                        </span>
+                      </span>
+                    </label>
+                  </div>
+                  <div>
                     <input id="extension-classic"
                            name="extension"
                            type="radio"
@@ -428,6 +445,7 @@
     <script src="util.js"></script>
     <script src="presets/casual.js"></script>
     <script src="presets/safe.js"></script>
+    <script src="presets/adventure.js"></script>
     <script src="presets/glitch.js"></script>
     <script src="presets/glitch-hard.js"></script>
     <script src="presets/index.js"></script>
