Add Balance preset

--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@
     <script src="presets/adventure.js"></script>
     <script src="presets/glitch.js"></script>
     <script src="presets/glitch-hard.js"></script>
+    <script src="presets/balance.js"></script>
     <script src="presets/index.js"></script>
     <script src="worker.js"></script>
     <script src="ecc-edc-recalc-js.js"></script>
