--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>April 2, 2020</time></h3>
+      <ul>
+        <li>Add Adventure preset.</li>
+        <li>Add Balance preset.</li>
+        <li>Add night mode.</li>
+      </ul>
       <h3><time>March 31, 2020</time></h3>
       <ul>
         <li>Fix exception when replacing Holy Glasses with relic.</li>
