--- a/index.html
+++ b/index.html
@@ -237,6 +237,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>April 3, 2020</time></h3>
+      <ul>
+        <li>Randomize all cape colors.</li>
+      </ul>
       <h3><time>April 2, 2020</time></h3>
       <ul>
         <li>Add Adventure preset.</li>
