Add speedrun preset

--- a/index.html
+++ b/index.html
@@ -457,6 +457,7 @@
     <script src="presets/casual.js"></script>
     <script src="presets/safe.js"></script>
     <script src="presets/adventure.js"></script>
+    <script src="presets/speedrun.js"></script>
     <script src="presets/glitch.js"></script>
     <script src="presets/glitch-hard.js"></script>
     <script src="presets/balance.js"></script>
