--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
       <h3><time>April 3, 2020</time></h3>
       <ul>
         <li>Randomize all cape colors.</li>
+        <li>Fix erasing Ring of Vlad location.</li>
       </ul>
       <h3><time>April 2, 2020</time></h3>
       <ul>
