--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
       <h2><a name="changelog">Changelog</a></h2>
       <h3><time>April 3, 2020</time></h3>
       <ul>
+        <li>Add Speedrun preset.</li>
         <li>Randomize all cape colors.</li>
         <li>Fix erasing Ring of Vlad location.</li>
       </ul>
