--- a/index.html
+++ b/index.html
@@ -237,6 +237,11 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>April 5, 2020</time></h3>
+      <ul>
+        <li>Add Sprite and Nosedevil familiars in Guarded and Equipment
+          extensions.</li>
+      </ul>
       <h3><time>April 3, 2020</time></h3>
       <ul>
         <li>Add Speedrun preset.</li>
