--- a/index.html
+++ b/index.html
@@ -235,6 +235,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>April 8, 2020</time></h3>
+      <ul>
+        <li>Add multithreaded seed generation strategy.</li>
+      </ul>
       <h3><time>April 5, 2020</time></h3>
       <ul>
         <li>Add Sprite and Nosedevil familiars in Guarded and Equipment
