--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?u8vidh">
     <link rel="stylesheet" href="index.css">
   </head>
-  <body class="dark">
+  <body>
     <div id="version"></div>
     <div id="content">
       <h1>Castlevania: Symphony of the Night Randomizer</h1>
@@ -159,9 +159,15 @@
           <fieldset>
             <legend>Options</legend>
             <div class="pure-g">
-              <div class="pure-u-1">
-                <input id="dark-theme" type="checkbox">
-                <label for="dark-theme">Night mode</label>
+              <div class="pure-u-12-24">
+                <label for="theme">Theme</label>
+              </div>
+              <div class="pure-u-12-24">
+                <select id="theme" type="checkbox">
+                  <option value="menu">Menu</option>
+                  <option value="light">Light</option>
+                  <option value="dark">Dark</option>
+                </select>
               </div>
               <div class="pure-u-1">
                 <input id="append-seed" type="checkbox">
@@ -185,19 +191,18 @@
         <p class="pure-u-1">
           <input id="randomize"
                  type="submit"
-                 class="pure-button pure-button-primary"
+                 class="primary"
                  disabled="disabled"
                  value="Randomize">
           <input id="copy"
                  type="submit"
-                 class="pure-button"
                  disabled="disabled"
                  value="Copy seed">
         </p>
         <a id="download" style="display:none"></a>
         <div id="loader"></div>
       </form>
-      <div id="notification">Copied to clipboard</div>
+      <div id="notification"><span>Copied to clipboard<span></div>
       <hr>
       <h2><a name="help">Help</a></h2>
       <h4><a name="usage">Usage</a></h4>
