Add complexity selector to GUI

--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
                 </span>
               </div>
               <div class="pure-u-12-24">
+                <label for="complexity">Complexity</label>
+              </div>
+              <div class="pure-u-12-24">
+                <input id="complexity" type="number" min="1" max="7">
+                <span class="tooltip-wrapper">
+                  <span class="tooltip-indicator">?</span>
+                  <span class="tooltip hidden">
+                    Lower complexities generate faster but are easier to beat.
+                  </span>
+                </span>
+              </div>
+              <div class="pure-u-12-24">
                 <input id="enemy-drops" type="checkbox">
                 <label for="enemy-drops">Enemy drops</label>
               </div>
