Style tooltips better for menu theme

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
                 <span class="tooltip-wrapper">
                   <span class="tooltip-indicator">?</span>
                   <span class="tooltip hidden">
-                    <span id="preset-description"></span>
-                    <span id="preset-author"></span>
+                    <span>
+                      <span id="preset-description"></span>
+                      <span id="preset-author"></span>
+                    </span>
                   </span>
                 </span>
               </div>
@@ -56,7 +58,10 @@
                 <span class="tooltip-wrapper">
                   <span class="tooltip-indicator">?</span>
                   <span class="tooltip hidden">
-                    Lower complexities generate faster but are easier to beat.
+                    <span>
+                      Lower complexities generate faster but are easier to
+                      beat.
+                    </span>
                   </span>
                 </span>
               </div>
@@ -93,7 +98,9 @@
                         <span class="tooltip-indicator">?</span>
                         <span class="tooltip hidden">
                           <span id="extension-description">
-                            Relics may appear in rooms guarded by bosses.
+                            <span>
+                              Relics may appear in rooms guarded by bosses.
+                            </span>
                           </span>
                         </span>
                       </span>
@@ -110,7 +117,9 @@
                         <span class="tooltip-indicator">?</span>
                         <span class="tooltip hidden">
                           <span id="extension-description">
-                            Relics may appear in place of equipment tiles.
+                            <span>
+                              Relics may appear in place of equipment tiles.
+                            </span>
                           </span>
                         </span>
                       </span>
@@ -127,8 +136,10 @@
                         <span class="tooltip-indicator">?</span>
                         <span class="tooltip hidden">
                           <span id="extension-description">
-                            Relics will only be randomized among the game's
-                            original relic locations.
+                            <span>
+                              Relics will only be randomized among the game's
+                              original relic locations.
+                            </span>
                           </span>
                         </span>
                       </span>
