--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>April 10, 2020</time></h3>
+      <ul>
+        <li>Add "Menu" theme.</li>
+      </ul>
       <h3><time>April 8, 2020</time></h3>
       <ul>
         <li>Add multithreaded seed generation strategy.</li>
