Keep authors position static

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   <span class="tooltip-indicator">?</span>
                   <span class="tooltip hidden">
                     <span>
-                      Lower complexities generate faster but are easier to
+                      Lower complexities generate faster but may be easier to
                       beat.
                     </span>
                   </span>
