--- a/index.html
+++ b/index.html
@@ -263,6 +263,12 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>April 12, 2020</time></h3>
+      <ul>
+        <li>Prevent generation of seeds that softlock at Holy Glasses.</li>
+        <li>Show preset ID at file select menu.</li>
+        <li>Increase minimum complexities.</li>
+      </ul>
       <h3><time>April 10, 2020</time></h3>
       <ul>
         <li>Add "Menu" theme.</li>
