--- a/index.html
+++ b/index.html
@@ -268,6 +268,11 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>April 17, 2020</time></h3>
+      <ul>
+        <li>Add solutions to spoiler log.</li>
+        <li>Increase minimum complexities.</li>
+      </ul>
       <h3><time>April 12, 2020</time></h3>
       <ul>
         <li>Prevent generation of seeds that softlock at Holy Glasses.</li>
