Revamp of multithreaded strategy

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
       <h3><time>April 2, 2020</time></h3>
       <ul>
         <li>Add Adventure preset.</li>
-        <li>Add Balance preset.</li>
+        <li>Add Empty hand preset.</li>
         <li>Add night mode.</li>
       </ul>
       <h3><time>March 31, 2020</time></h3>
@@ -521,7 +521,7 @@
     <script src="presets/speedrun.js"></script>
     <script src="presets/glitch.js"></script>
     <script src="presets/glitch-hard.js"></script>
-    <script src="presets/balance.js"></script>
+    <script src="presets/empty-hand.js"></script>
     <script src="presets/index.js"></script>
     <script src="worker.js"></script>
     <script src="browser.js"></script>
