--- a/index.html
+++ b/index.html
@@ -268,6 +268,12 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>April 21, 2020</time></h3>
+      <ul>
+        <li>Add Jewel of Open + Soul of Wolf + Skill of Wolf to Gold Ring
+          location locks in Speedrun preset.</li>
+        <li>Fix missing cape color layer.</li>
+      </ul>
       <h3><time>April 17, 2020</time></h3>
       <ul>
         <li>Add solutions to spoiler log.</li>
