Serialize presets into JSON

--- a/index.html
+++ b/index.html
@@ -521,14 +521,13 @@
     <script src="util.js"></script>
     <script src="randomize_relics.js"></script>
     <script src="randomize_items.js"></script>
-    <script src="presets/casual.js"></script>
-    <script src="presets/safe.js"></script>
-    <script src="presets/adventure.js"></script>
-    <script src="presets/speedrun.js"></script>
-    <script src="presets/glitch.js"></script>
-    <script src="presets/glitch-hard.js"></script>
-    <script src="presets/empty-hand.js"></script>
-    <script src="presets/index.js"></script>
+    <script src="build/presets/casual.js"></script>
+    <script src="build/presets/safe.js"></script>
+    <script src="build/presets/adventure.js"></script>
+    <script src="build/presets/speedrun.js"></script>
+    <script src="build/presets/glitch.js"></script>
+    <script src="build/presets/empty-hand.js"></script>
+    <script src="build/presets/index.js"></script>
     <script src="worker.js"></script>
     <script src="browser.js"></script>
   </body>
