--- a/relics/index.html
+++ b/relics/index.html
@@ -13,8 +13,8 @@
     <script src="/extension.js"></script>
     <script src="/relics.js"></script>
     <script src="/util.js"></script>
-    <script src="/presets/casual.js"></script>
-    <script src="/presets/safe.js"></script>
+    <script src="/build/presets/casual.js"></script>
+    <script src="/build/presets/safe.js"></script>
     <script src="/relics/index.js"></script>
   </body>
 </html>
