--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
       <hr>
       <h2><a name="links">Links</a></h2>
       <ul>
+        <li><a href="/faq">FAQ</a></li>
         <li><a href="https://github.com/TalicZealot/SotN-Relic-Tracker">Relic Tracker [Lua version]</a> (thanks TalicZealot)</li>
         <li><a href="relics">Relic distribution table</a> (thanks Soba)</li>
         <li><a href="https://discord.gg/wGMdDRG">The Long Library</a>, a SotN
