--- a/index.html
+++ b/index.html
@@ -269,6 +269,11 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>April 25, 2020</time></h3>
+      <ul>
+        <li>Increase worker performance.</li>
+        <li>Add <a href="/faq">FAQ</a>.</li>
+      </ul>
       <h3><time>April 21, 2020</time></h3>
       <ul>
         <li>Add Jewel of Open + Soul of Wolf + Skill of Wolf to Gold Ring
