--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <label for="complexity">Complexity</label>
               </div>
               <div class="pure-u-12-24">
-                <input id="complexity" type="number" min="1" max="10">
+                <input id="complexity" type="number" min="1">
                 <span class="tooltip-wrapper">
                   <span class="tooltip-indicator">?</span>
                   <span class="tooltip hidden">
