--- a/index.html
+++ b/index.html
@@ -269,6 +269,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>April 30, 2020</time></h3>
+      <ul>
+        <li>Add Pixie singing "Nocturne" when sitting in a chair.</li>
+      </ul>
       <h3><time>April 25, 2020</time></h3>
       <ul>
         <li>Increase worker performance.</li>
