--- a/index.html
+++ b/index.html
@@ -269,6 +269,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>June 3, 2020</time></h3>
+      <ul>
+        <li>Fix duped progression item in Cave.</li>
+      </ul>
       <h3><time>Map 26, 2020</time></h3>
       <ul>
         <li>Add Forbidden Library Opal location to Adventure preset.</li>
